--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
          {% include "nav.html" %}
          
         <div class="row">
-          <div class="col-lg-9">
+          <div class="col-lg-12">
               <div class="card">
                   <h5 class="card-header">{{title}}</h5>
                   <div class="card-body">
@@ -33,10 +33,10 @@
              
           </div>
           
-          <div class="col-lg-3">
+          <!-- <div class="col-lg-3">
              <h2 id="myH"></h2>
              {% include "ads.html" %}
-          </div>
+          </div> -->
         </div>
       </div>   
     <!-- Optional JavaScript -->
