--- a/templates/nav.html
+++ b/templates/nav.html
@@ -8,7 +8,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="{% url 'home:index'%}">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -19,11 +19,28 @@
               <a class="nav-link" href="{% url 'home:contact'%}">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'members:index' %}">Members</a>
+              <a class="nav-link" href="{% url 'member:index' %}">Members</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'product:index' %}">商品管理</a>
             </li>
+          </ul>
+          
+          {% if request.COOKIES.name %}
+          <span>{{request.COOKIES.name}} 您好</span>
+          {% else %}
+          <span>請先</span>
+          {% endif %}
+
+          <ul class="navbar-nav float-right">
+              <li class="nav-item">
+                {% if request.COOKIES.name %}
+                <a class="nav-link" href="{% url 'member:logout' %}">登出</a>
+                {% else %}                
+                <a class="nav-link" href="{% url 'member:login' %}">登入</a>
+                {% endif %}
+
+              </li>
           </ul>
         </div>
       </nav>
